--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,15 @@
+@import url(https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap);
+body {
+    font-family: 'Ubuntu', sans-serif;
+    margin: 0;
+}
+
+main {
+    margin: 10px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
 
