Form Error Messages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,3 +53,10 @@ button {
 .align-center {
     align-items: center;
 }
+
+.error-message {
+    font-weight: bold;
+    color: red;
+    padding-top: 5px;
+}
+
