--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
-
+@import url(https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap);
 body {
     font-family: 'Ubuntu', sans-serif;
     margin: 0;
@@ -12,4 +11,51 @@ main {
 a {
     color: black;
     text-decoration: none;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 5px;
+    margin: 0 3px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.flex {
+    display: flex;
+}
+
+.justify-space-between {
+    justify-content: space-between;
+}
+
+.align-center {
+    align-items: center;
+}
+
+.error-message {
+    font-weight: bold;
+    color: red;
+    padding-top: 5px;
 }
